# ZToolTip

./: .coveragerc  LICENSE  README.md  pyproject.toml
demo/pyqt5/: window.py
demo/pyqt6/: window.py
demo/pyside6/: window.py
src/ztooltip/: placement_utils.py  tooltip.py
tests/: placement_utils_test.py  tooltip_test.py  utils_test.py
